--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tokopaimon",
+  "name": "tokopaimon-ecommerce",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0"
   }
 }
