--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
